# kendryte-hal

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE-MULAN  README.md
examples/peripherals/gpio-blinky-demo/: Cargo.toml  README.md
examples/peripherals/gpio-blinky-demo/src/: main.rs
examples/peripherals/gpio-button-demo/: Cargo.toml  README.md
examples/peripherals/gpio-button-demo/src/: main.rs
examples/peripherals/multicore-demo/: Cargo.toml  README.md
examples/peripherals/multicore-demo/src/: main.rs
examples/peripherals/pwm-demo/: Cargo.toml  README.md  build.rs
examples/peripherals/pwm-demo/src/: main.rs
examples/peripherals/spi-demo/: Cargo.toml  README.md
examples/peripherals/spi-demo/src/: main.rs
examples/peripherals/uart-demo/: Cargo.toml  README.md
examples/peripherals/uart-demo/src/: main.rs
kendryte-hal/: Cargo.toml
kendryte-hal/src/: clocks.rs  instance.rs  lib.rs
kendryte-hal/src/gpio/: config.rs  error.rs  input.rs  mod.rs  output.rs  pad.rs  register.rs
kendryte-hal/src/gpio/blocking/: dynamic.rs  input.rs  mod.rs  output.rs  unconfigured.rs
kendryte-hal/src/i2c/: register.rs
kendryte-hal/src/iomux/: mod.rs  ops.rs  pad.rs  register.rs
kendryte-hal/src/lsadc/: register.rs
kendryte-hal/src/pad/: mod.rs  pad_ops.rs  pads.rs
kendryte-hal/src/pad/function/: gpio.rs  mod.rs  uart.rs
kendryte-hal/src/pwm/: channel.rs  driver.rs  mod.rs  pad.rs  register.rs
kendryte-hal/src/spi/: driver.rs  mod.rs  pad.rs  register.rs
kendryte-hal/src/uart/: blocking.rs  config.rs  error.rs  mod.rs  pad.rs  register.rs
kendryte-hal/src/uart/blocking/: mod.rs  rx.rs  tx.rs
kendryte-rt/: Cargo.toml  build.rs
kendryte-rt/macros/: Cargo.toml
kendryte-rt/macros/src/: lib.rs
kendryte-rt/src/: interrupt.rs  lib.rs  macros.rs
kendryte-rt/src/arch/: cpu_c908.rs  mod.rs
kendryte-rt/src/soc/: k230.rs  mod.rs
kendryte-rt/src/soc/k230/: mod.rs  pads.rs
kendryte-rt/src/soc/k230/peripheral/: gpio.rs  mod.rs  pwm.rs  spi.rs  uart.rs
kendryte-rt/src/soc/k510/: mod.rs
scripts/: test-image-flows.sh
xtask/: Cargo.toml
xtask/src/: error.rs  lib.rs  main.rs
xtask/src/convert/: elf.rs  mod.rs
xtask/src/generate/: config.rs  firmware.rs  image.rs  mod.rs
xtask/tests/data/: image_aes_encryption.img  image_none_encryption.img  image_sm4_encryption.img
