[workspace]
resolver = "3"
members = [
    "kendryte-hal",
    "kendryte-rt",
    "kendryte-rt/macros",
    "xtask",
    "examples/peripherals/uart-demo",
    "examples/peripherals/gpio-blinky-demo",
    "examples/peripherals/gpio-button-demo",
    "examples/peripherals/pwm-demo",
    "examples/peripherals/spi-demo",
    "examples/peripherals/multicore-demo",
]

[workspace.package]
edition = "2024"
license = "MulanPSL-2.0 OR MIT"
repository = "https://github.com/rustsbi/kendryte-hal"
