[package]
name = "kendryte-hal"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arbitrary-int = "1.3"
bitbybit = "1.3"
embedded-io = "0.6.1"
embedded-hal-nb ="1.0.0"
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
volatile-register = "0.2.2"
