[package]
name = "kendryte-rt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kendryte-hal = { path = "../kendryte-hal" }
cfg-if = "1.0.0"
kendryte-rt-macros = { path = "macros" }
arbitrary-int = "1.3"

[features]
default = []
k230 = ["cpu-c908"]
k510 = []

cpu-c908 = []
# TODO cpu-andesv5 = []
