[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
cipher = "0.4"
clap = { version = "4.5", features = ["derive"] }
elliptic-curve = "0.13"
hex = "0.4"
num-bigint = "0.4.6"
num-bigint-dig = "0.8"
primeorder = "0.13"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
signature = "2.2.0"
sm2 = { version = "0.13.3", features = ["arithmetic"], git = "https://github.com/ZhengLongBing/sm2.git" }
sm3 = "0.4"
sm4 = "0.5"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"