[package]
name = "kendryte-rt-macros"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
proc-macro2 = "1.0.94"
syn = { version = "2.0.100", features = ["extra-traits", "full"] }

