[package]
name = "kendryte-rt-macros"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
proc-macro2 = "1.0.94"
syn = { version = "2.0.100", features = ["extra-traits", "full"] }

[features]
default = []
# Enable when compiling on nightly toolchain with `-Z unstable-options` so that
# unsafe attributes syntax like `#[unsafe(no_mangle)]` can be emitted.
nightly = []
