[package]
name = "gpio-button-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
panic-halt = "1.0.0"
kendryte-hal = { path = "../../../kendryte-hal"}
kendryte-rt = { path = "../../../kendryte-rt",features = ["k230"]}
riscv = "0.13.0"

[[bin]]
name = "gpio-button-demo"
test = false