[package]
name = "multicore-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
panic-halt = "1.0.0"
kendryte-hal = { path = "../../../kendryte-hal" }
kendryte-rt = { path = "../../../kendryte-rt", features = ["k230"] }
riscv = "0.13.0"
embedded-io = { version = "0.6", default-features = false }


[[bin]]
name = "multicore-demo"
test = false
