[package]
name = "uart-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
panic-halt = "1.0.0"
kendryte-hal = { path = "../../../kendryte-hal"}
kendryte-rt = { path = "../../../kendryte-rt",features = ["k230"]}
embedded-io = "0.6.1"
riscv = "0.13.0"

[[bin]]
name = "uart-demo"
test = false
